--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,166 @@
-.accordion {
-  width: 100%;
+.wrap {
+  width: 960px;
+  margin: auto;
 }
-.accordion li:hover {
-  background: white;
-  transition: ease .5s;
+.navigation {
+  box-shadow: 0 1px 5px 0 #ccc;
+  text-align: right;
 }
-.accordion li button {
-  width: 100%;
-  height: 10%;
-  padding: 5px 0;
+.header-icon {
+  float: left;
+  display: inline-block;
+}
+.header-icon a img {
+  width: 100px;
+  height: auto;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+.menu {
+/*  float: right;*/
+  display: inline-block;
+}
+.menu-icon img {
+  display: none;
+}
+.menu>li {
+  position: relative;
+  display: inline-block;
+  padding: 0 30px;
+  box-sizing: border-box;
+/*  border-right: solid 1px #ccc;*/
+}
+.menu li:last-child {
+  border-right: solid 1px #fff;
+}
+.menu li:hover .sub-menu{
+  display: block;
+}
+.menu li:hover {
+  background: #ccc;
+}
+.menu>li>a {
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+  font-family: sans-serif;
+  padding: 35px 0;
+  box-sizing: border-box;
+  display: block;
+}
+.sub-menu {
   text-align: left;
-  background: transparent url(../images/right-angle-bracket-symbol-icon-65027.png) 98% 50% no-repeat;
-  background-size: 25px;
+  /* background: #ccc; */
+  display: none;
+  z-index: 999;
+  position: absolute;
+  width: 150px;
+  top: 80px;
+  left: -43px;
+  box-shadow: 0 3px 5px 0 #ccc;
 }
-.accordion li ul {
-  background: #c0c0c0;
-  font-size: 24px;
+.sub-menu li:hover .child-sub-menu{
+  display: block;
+}
+.sub-menu li {
+  padding: 20px 10px;
+  position: relative;
+}
+.child-sub-menu {
+  text-align: left;
+  /* background: #ccc; */
+  display: none;
+  z-index: 999;
+  position: absolute;
+  width: 150px;
+  top: 2px;
+  left: 152px;
+  box-shadow: 0 3px 5px 0 #ccc;
+}
+.child-sub-menu li {
+  padding: 20px 10px;
+  box-sizing: border-box;
 }
 
+@media only screen and (max-width: 960px) {
+  body {
+/*    background: lightblue;*/
+  }
+  .wrap {
+    width: 100%;	
+    margin: auto;
+  }
+  .navigation {
+    box-shadow: 0 1px 5px 0 #ccc;
+    text-align: right;
+    padding: 0 0 10px 0;
+  }
+  .menu {
+    display: none;
+  }
+  .menu>li>a {
+    pointer-events: none;
+    padding: 20px 0;
+  }
+  .menu>li {
+    background: #ccc;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    padding: 0;
+    box-sizing: border-box;
+    border-right: solid 0 transparent;
+    border-bottom: solid 1px #ccc;
+/*    border-bottom: solid 1px transparent;*/
+  }
+  .menu>li:last-child {
+    border-bottom: solid 0px #ccc;
+    /*    border-bottom: solid 1px transparent;*/
+  }
+  .menu-icon img{
+    display: inline-block;
+    width: 70px;
+    margin: 5px 0 0;
+  }
+  .sub-menu {
+    text-align: center;
+    background: #ccc; 
+    display: none;
+    position: relative;
+    width: 100%; 
+    top: 0; 
+    left: 0; 
+    box-shadow: 0 0 0 0 black;
+  }
+  .sub-menu li {
+    box-sizing: border-box;
+    position: relative;
+    text-align: center;
+    background: #eee;
+    padding: 20px 0;
+  }
+  .sub-menu li>a{
+    padding: 0 0 20px 0;
+    display: block;
+  }
+  .open-menu {
+    display: block;
+    transition: ease 1s;
+  }
+  .child-sub-menu {
+    text-align: left;
+    /* background: #ccc; */
+    display: none;
+    position: relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+    box-shadow: 0 0 0 0 #ccc;
+  }
+  .child-sub-menu li {
+    background: #fff;
+    padding: 20px 0;
+    box-sizing: border-box;
+  }
+}
